use abs path to the action

--- a/.github/workflows/rss.yml
+++ b/.github/workflows/rss.yml
@@ -21,11 +21,8 @@ jobs:
       pages: write
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
       - name: Create RSS feed
-        uses: ./
+        uses: kulapard/tg-rss@main
         with:
           output-file: ${{ env.OUTPUT_DIR }}/${{ env.OUTPUT_FILENAME }}
           telegram-channels: "@Alexey_Pivo_varov,@addmeto,@kyrillic,@dukaliti,@pmdaily"
