--- a/.github/workflows/rss.yml
+++ b/.github/workflows/rss.yml
@@ -1,7 +1,7 @@
 name: Build RSS feed
 on:
   schedule:
-    - cron: '*/30 * * * *'
+    - cron: '0 * * * *'
   workflow_dispatch:
 
 # one running workflow per branch, others will wait
