--- a/.github/workflows/ci-action.yml
+++ b/.github/workflows/ci-action.yml
@@ -15,16 +15,16 @@ jobs:
     runs-on: ubuntu-latest
     env:
       OUTPUT_DIR: ${{ github.workspace }}/output
-      OUTPUT_FILENAME: "rss.xml"
     steps:
       - uses: actions/checkout@v4
       - name: Create RSS feed
         uses: ./
         with:
-          output-file: ${{ env.OUTPUT_DIR }}/${{ env.OUTPUT_FILENAME }}
+          output-dir: ${{ env.OUTPUT_DIR }}/${{ env.OUTPUT_FILENAME }}
+          formats: "xml,json"
           telegram-channels: "@telegram"
-          dry-run: false
 
       - name: Check RSS feed file exists
         run: |
-          test -f "${{ env.OUTPUT_DIR }}/${{ env.OUTPUT_FILENAME }}"
+          test -f "${{ env.OUTPUT_DIR }}/feed.xml"
+          test -f "${{ env.OUTPUT_DIR }}/feed.json"
