--- a/.github/workflows/ci-action.yml
+++ b/.github/workflows/ci-action.yml
@@ -2,8 +2,7 @@ name: test action
 
 on:
   push:
-    branches:
-      - 'main'
+    branches: [ main ]
     paths: # to run only on changes in the action file
       - 'action.yml'
 
@@ -22,7 +21,7 @@ jobs:
       - name: Create RSS feed
         uses: ./
         with:
-          output-dir: ${{ env.OUTPUT_DIR }}/${{ env.OUTPUT_FILENAME }}
+          output-dir: ${{ env.OUTPUT_DIR }}
           formats: "xml,json"
           telegram-channels: "@telegram"
 
