--- a/.github/workflows/feed.yml
+++ b/.github/workflows/feed.yml
@@ -1,4 +1,4 @@
-name: Build RSS feed
+name: Build feed
 on:
   schedule:
     - cron: '0 * * * *'
@@ -12,7 +12,7 @@ env:
   OUTPUT_DIR: './pages'
 
 jobs:
-  build-rss:
+  build-feed:
     permissions:
       id-token: write  # to use pages
       contents: read
