--- a/.github/workflows/feed.yml
+++ b/.github/workflows/feed.yml
@@ -19,7 +19,7 @@ jobs:
       pages: write
     runs-on: ubuntu-latest
     steps:
-      - name: Create RSS feed
+      - name: Create feed
         uses: kulapard/tg2feed@main
         with:
           output-dir: ${{ env.OUTPUT_DIR }}
