--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,8 +2,10 @@ name: Test and build
 
 on:
   push:
-    branches:
+    branches: [ "main" ]
     tags:
+  pull_request:
+    branches: [ "main" ]
 
 # one running workflow per branch, others will wait
 concurrency:
@@ -22,9 +24,7 @@ jobs:
         run: go version
 
       - name: Build and test
-        run: |
-          go test -race -v -timeout=100s -covermode=atomic -coverprofile=$GITHUB_WORKSPACE/coverage.out ./...
-        working-directory: app
+        run: go test -race -v -timeout=100s -covermode=atomic -coverprofile=coverage.txt ./...
         env:
           GO111MODULE: on
           GOFLAGS: "-mod=vendor"
@@ -37,7 +37,6 @@ jobs:
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4-beta
         env:
-          files: $GITHUB_WORKSPACE/coverage.out
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
   build-image:
