--- a/.github/workflows/feed.yml
+++ b/.github/workflows/feed.yml
@@ -24,7 +24,7 @@ jobs:
         with:
           output-dir: ${{ env.OUTPUT_DIR }}
           formats: "rss,atom,json"
-          telegram-channels: "@Alexey_Pivo_varov,@addmeto,@kyrillic,@dukaliti,@pmdaily"
+          telegram-channels: "@Alexey_Pivo_varov,@addmeto,@kyrillic,@pmdaily"
 
       - name: Setup Pages
         uses: actions/configure-pages@v5
